--- a/css/contact.css
+++ b/css/contact.css
@@ -18,7 +18,7 @@ header{
     flex-direction: column;
     padding: 1vh 1vw;
     background-color: #ffffff;
-    color: #bd81ed;
+    color: #390765;
 }
 
 #container{
@@ -55,6 +55,7 @@ nav li{
 
 nav a{
     text-decoration: none;
+    color: #390765;
 }
 
 main{
@@ -86,7 +87,7 @@ main li{
     margin: 2vw 0;
     text-align: center;
     font-size: calc(2px + 2vw);
-    color: #ffffff;
+    color: #390765;
 }
 
 #main-text{
@@ -114,7 +115,7 @@ main li{
 
 footer{
     background-color: #ffffff;
-    color: #bd81ed;
+    color: #390765;
     padding: 1vh 1vw;
     display: flex;
     flex-direction: row;
@@ -152,6 +153,11 @@ footer{
         margin: 1vh 0;
     }
 
+    nav a{
+        text-decoration: none;
+        color: #390765;
+    }
+
     main {
         width: 100%;
         height: auto; /*increase height of main to 100vh to avoid white space at bottom*/
@@ -185,7 +191,6 @@ footer{
 
     #main-title{
         text-align: center;
-        color: #ffffff;
     }
 
 }
