--- a/css/projects.css
+++ b/css/projects.css
@@ -18,7 +18,7 @@ header{
     flex-direction: column;
     padding: 1vh 1vw;
     background-color: #ffffff;
-    color: #bd81ed;
+    color: #390765;
 }
 
 #container{
@@ -55,6 +55,7 @@ nav li{
 
 nav a{
     text-decoration: none;
+    color: #390765;
 }
 
 main{
@@ -86,7 +87,7 @@ main p{
     margin: 2vw 0;
     text-align: center;
     font-size: calc(2px + 2vw);
-    color: #ffffff;
+    color: #390765;
 }
 
 #main-text{
@@ -114,7 +115,7 @@ input {
 }
 
 button {
-    background: #a76bd8;
+    background: #390765;
     border-radius: 100px;
     color:white;
 
@@ -127,7 +128,7 @@ button {
 
 footer{
     background-color: #ffffff;
-    color: #bd81ed;
+    color: #390765;
     padding: 1vh 1vw;
     display: flex;
     flex-direction: row;
@@ -167,6 +168,7 @@ footer{
 
     nav a{
         text-decoration: none;
+        color: #390765;
     }
 
     main{
@@ -194,7 +196,6 @@ footer{
 
     #main-title{
         text-align: center;
-        color: #ffffff;
     }
 
     #calculator {
